syntax = "proto3";

option csharp_namespace = "AuthManager.GRPC";

package AuthManager;

// The greeting service definition.
service Login {
  // Sends a greeting
  rpc DoLogin (LoginRequest) returns (LoginResponse);
}

// The request message containing the user's name.
message LoginRequest {
  string username = 1;
  string password = 2;
  string totpCode = 3;
  string totpRecoveryCode = 4;
}

// The response message containing the greetings.
message LoginResponse {
  string accessToken = 1;
}
